--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			<!-- Page3 -->
             <div class="item" style="height:100vh;background-image:url(&quot;assets/img/CardsAgainstHumanity Background.jpg&quot;);background-position:center;background-size:cover;background-repeat:no-repeat;">
                 <div class="container" data-aos="flip-down" data-aos-duration="900" style="height:35vh;padding-top:10px;padding-bottom:0px;">
-                    <div class="col-md-12" data-bs-hover-animate="swing" style="background-image:url(&quot;assets/img/Cards Against Humanity.png&quot;);background-size:contain;background-position:center;height:35vh;background-repeat:no-repeat;"></div>
+                    <div class="col-md-12" data-bs-hover-animate="swing" style="background-image:url(&quot;assets/img/Cards against humanity.png&quot;);background-size:contain;background-position:center;height:35vh;background-repeat:no-repeat;"></div>
                 </div>
                 <div class="col-md-12 col-xs-offset-0">
                     <p class="text-center" data-aos="zoom-in" data-aos-duration="900" id="butons">
